--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -13,7 +13,7 @@ addons.schedule.menu.close = Kapat
 addons.schedule.menu.create = Yarat
 addons.schedule.menu.edit = Düzenle
 addons.schedule.menu.finished = Tamamlandı!
-addons.schedule.menu.maxdl = Mak.İndirme
+addons.schedule.menu.maxdl = mak. İndirme
 addons.schedule.menu.maxspeed = mak. İndirme hızı
 addons.schedule.menu.p_time = Doğru bir zaman dilimi seçin
 addons.schedule.menu.reconnect = Tekrar Bağlan ?
@@ -50,7 +50,7 @@ decrypter.unknownerror = Bilinmeyen hata
 decrypter.wrongcaptcha = Yanlış captcha kodu
 decrypter.wrongpassword = Yanlış Parola
 download.chunks.connection = Bağlantı
-download.chunks.label = Dosya veri parçaları
+download.chunks.label = Dosya veri parçaları bağlantı sayısı 
 download.connection.idle = boşta
 download.connection.normal = İndir
 download.error.message.connectioncopyerror = Bağlantı klonlanamadı
@@ -118,7 +118,7 @@ gui.config.captcha.train.show_timeout = Captcha penceresi geri sayım (san)
 gui.config.clr.script = CLR Script
 gui.config.download.autoresume = Tekrar bağlan sürdürebilen indirmeleri kesebilsin
 gui.config.download.buffersize = Mak. Arabellek Boyutu [MB]
-gui.config.download.chunks = Dosya / Veri parçaları indirme sayısı
+gui.config.download.chunks = Dosya / Veri parçaları indirme sayısı (bağlantı sayısı)
 gui.config.download.connectionlost.wait = Bağlantı kaybında bekleme süresi [san]
 gui.config.download.crc = SFV/CRC mümkün olduğunda kontrol et
 gui.config.download.download.tab = İndirme Ayarları
@@ -134,7 +134,7 @@ gui.config.download.proxy.host = Host/IP
 gui.config.download.proxy.pass = Parola (opsiyonel)
 gui.config.download.proxy.port = Port
 gui.config.download.proxy.user = Kullanıcı adı (opsiyonel)
-gui.config.download.retries = Geçici barındırıcı problemlerinde Mak.deneme sayısı
+gui.config.download.retries = Geçici barındırıcı problemlerinde Mak. deneme sayısı
 gui.config.download.simultan_downloads = Aynı anda Mak.İndirme sayısı
 gui.config.download.socks.host = Host/IP
 gui.config.download.socks.port = Port
@@ -158,7 +158,7 @@ gui.config.fengshui.fritzbox.title = Algılanan router: Fritz!Box
 gui.config.fengshui.fritzbox.upnp.checkbox = Bu mesajı birdaha gösterme
 gui.config.fengshui.fritzbox.upnpactive = Fritz!Box routerınız var. Lütfen fritz!box'unuz için UPNP'yi etkinleştirin.
 gui.config.fengshui.fritzbox.upnpinactive = Fritz!Box'unuz için lütfen UPNP'yi etkinleştirin<br><a href="http://%s">to Fritz!Box Webinterface</a><br><a href="http://wiki.jdownloader.org/index.php?title=Fritz!Box_Upnp">Wiki: Fritz!Box Upnp</a>
-gui.config.general.createSubFolders = İndirilen paket için adını içeren alt-klasör yarat
+gui.config.general.createSubFolders = İndirilen paket için adını içeren Alt-klasör yarat
 gui.config.general.downloadDirectory = Varsayılan indirme klasorü
 gui.config.general.filelogger = Günlüğü burda oluştur ./logs/ directory
 gui.config.general.loggerLevel = Oturum seviyesi
@@ -174,7 +174,7 @@ gui.config.gui.autopackagelimit = Otomatik paket yaratma başlangıç limiti
 gui.config.gui.Browser = İnternet Tarayıcı
 gui.config.gui.container.tab = İndirme Linkleri
 gui.config.gui.custom_browser = Tarayıcının bulunduğu yol
-gui.config.gui.custom_browser_param = Parametre %url (her parametre için tek satır)
+gui.config.gui.custom_browser_param = Parametre %url (her satır için tek parametre)
 gui.config.gui.disabledialogs = Onaylama dialogları devre dışı
 gui.config.gui.disabletooltipps = İndirme listesinde araç ipucu etkisiz 
 gui.config.gui.extended = Gelişmiş
@@ -203,16 +203,16 @@ gui.config.jdrr.title = Tekrar Bağlan kaydedici
 gui.config.jdshutdown.forceshutdown = Sistem kapatmayı zorla (Bazı sistemler için)
 gui.config.liveHeader.autoConfig = Router Otomatik Yapılandırma
 gui.config.liveHeader.btnFindIP = Router IP Tespiti
-gui.config.liveHeader.dialog.importRouter = Router Seçimi (routerınız yoksa kaydediciyi kullanın)
+gui.config.liveHeader.dialog.importRouter = Router seç (Router lisede yoksa kaydediciyi kullan)
 gui.config.liveHeader.password = Parola
 gui.config.liveHeader.progress.message = jDownloader router ayarlarınızı arıyor
-gui.config.liveHeader.retries = Mak.deneme sayısı [-1 = Sınırsız]
-gui.config.liveHeader.routerIP = RouterIP [->%%%routerip%%%]
-gui.config.liveHeader.script = HTTP Script [betik yazı ile]
+gui.config.liveHeader.retries = Mak. deneme sayısı (-1=Limitsiz)
+gui.config.liveHeader.routerIP = RouterIP (->%%%routerip%%%)
+gui.config.liveHeader.script = HTTP Script (betik yazı ile)
 gui.config.liveHeader.selectRouter = Router Seç
 gui.config.liveHeader.user = Kullanıcı Adı
-gui.config.liveHeader.waitForIP = IP Zamanlayıcı [san]
-gui.config.liveHeader.waitTimeForIPCheck = İlk IP kontrolü için bekleme süresi [san]
+gui.config.liveHeader.waitForIP = IP Zamanlayıcı (san)
+gui.config.liveHeader.waitTimeForIPCheck = İlk IP kontrolü bekleme süresi (san)
 gui.config.liveHeader.warning.noCURLConvert = JD CURL scriptini çeviremedi. Lütfen destek için JD-Destek-Takımına başvurunuz!
 gui.config.liveHeader.warning.notFound = jDownloader router ayarlarınızı algılayamadı.
 gui.config.liveHeader.warning.wizard = Ayarları oluşturmak biraz zaman alabilir.Lütfen router giriş bilgilerinizi giriniz. şimdi yürüt?
@@ -569,12 +569,12 @@ gui.splash.text.update = Güncelleştirmeler Kontrol Ediliyor
 gui.splash.text.webupdate = Güncellemeler Kontrol Ediliyor
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Mak.İnd
-gui.statusbar.speed = Mak.Hız
+gui.statusbar.speed = Hız
 gui.support.forumurl = http://www.the-lounge.org/viewforum.php?f=291
 gui.support.wikiurl = http://wiki.jdownloader.org/index.php?title=JDownloader_Wiki:Portal_English
 gui.tab.plugin_activity.column_plugin = Modül
 gui.tab.plugin_activity.column_progress = İlerleme
-gui.table.contextmenu.browseLink = Tarayıcı'da aç
+gui.table.contextmenu.browseLink = Tarayıcı'da Aç
 gui.table.contextmenu.copyPassword = Parolayı Kopyala
 gui.table.contextmenu.delete = Sil
 gui.table.contextmenu.disable = Devre Dışı Bırak
@@ -609,7 +609,7 @@ gui.textcomponent.context.selectall = Tümünü seç
 gui.textcomponent.context.selectall.acc = ctrl A
 gui.tooltip.statusbar.premium = Premium İndirmeler Açık/Kapalı
 gui.tooltip.statusbar.simultan_downloads = Aynı anda Mak.İndirme sayısı
-gui.tooltip.statusbar.speedlimiter = İndirme hız sınırı (kb/s) [0:Sınırzsız]
+gui.tooltip.statusbar.speedlimiter = İndirme hız Limiti (kb/s) [0:limitsiz]
 gui.treetable.header_1.tree = Paketler
 gui.treetable.header_2.files = Dosyalar
 gui.treetable.header_3.hoster = Barındırıcı
@@ -631,45 +631,45 @@ gui.warning.restartNeeded = jD'nin tekrar başlatılması gerek!
 init.webupdate.auto.countdowndialog = Otomatik Güncelleme
 init.webupdate.error.could_not_load_webupdater = Web güncelleme yüklenemedi
 init.webupdate.progress.0_title = Web-Güncelleme
-init.webupdate.progress.1_title = Güncelleştirme Kontrolü
+init.webupdate.progress.1_title = Güncelleştirme kontrolü
 installer.abortInstallation = Hata. yüklemeden vazgeçildi.
 installer.error.noWriteRights = Hata. Bu dizine yazdırma yetkiniz yok
 installer.welcome = JDownloader'a Hoşgeldiniz.Kurulum programı birkaç dosya yükleyecek.
 interaction.batchreconnect.batch = Batch Script
 interaction.batchreconnect.doOutput = Sonuçları günlüğe yaz
-interaction.batchreconnect.executeIn = Burda çalıştır [Uygulamanın bulunduğu dizini seçin]
+interaction.batchreconnect.executeIn = Burda çalıştır (Uygulamanın bulunduğu dizini seç)
 interaction.batchreconnect.name = Batch Tekrar Bağlan
 interaction.batchreconnect.progress.0_title = Batch Yaniden Bağlan
 interaction.batchreconnect.progress.1_retries = Batch Tekrar Bağlan #
 interaction.batchreconnect.progress.2_oldIP = Batch Tekrar Bağlan Eski IP:
 interaction.batchreconnect.progress.3_ipcheck = Batch Tekrar Bağlan Yeni IP: %s / %s
-interaction.batchreconnect.retries = Mak.deneme sayısı [-1 = Sınırsız]
+interaction.batchreconnect.retries = Mak. deneme sayısı (-1=Limitsiz)
 interaction.batchreconnect.terminal = Yorumlayıcı
 interaction.batchreconnect.toString = Batch Tekrar bağlan parametreleri
-interaction.batchreconnect.waitForIp = IP Zamanlayıcı [san]
-interaction.batchreconnect.waitForTermination = Komut sonlandırma için bukadar bekle [san]
-interaction.batchreconnect.waitTimeToFirstIPCheck = İlk IP kontrolü için bekleme süresi [san]
+interaction.batchreconnect.waitForIp = IP Zamanlayıcı (san)
+interaction.batchreconnect.waitForTermination = Komut sonlandırma için bukadar bekle (san)
+interaction.batchreconnect.waitTimeToFirstIPCheck = İlk IP kontrolü bekleme süresi (san)
 interaction.externExecute.cmd = Komut (salt dizin yolları kullan)
 interaction.externExecute.disable = olayı devere dışı bırak
-interaction.externExecute.executeIn = Burda başla (uygulama klasörü)
+interaction.externExecute.executeIn = Burda çalıştır (Uygulamanın bulunduğu dizini seç)
 interaction.externExecute.name = Harici (dışardan) yürüt
-interaction.externExecute.parameter = Parametre (1 parameter per line)
-interaction.externExecute.test = Uygulama çalistir
+interaction.externExecute.parameter = Parametre (her satır için tek parametre)
+interaction.externExecute.test = Uygulamayı çalistir
 interaction.externExecute.toString = Harici uygulama çalıştır
 interaction.externExecute.variables = Mevcut değişkenler
 interaction.externExecute.waitForTermination = Komut sonlandırma için bekleme süresi [san]
 interaction.externreconnect.command = Komut (salt dizin yolları kullan)
-interaction.externreconnect.name = Harici Tekrar bağlan
-interaction.externreconnect.parameter = Parametre (her parametre için tek satır)
+interaction.externreconnect.name = Harici Tekrar Bağlan
+interaction.externreconnect.parameter = Parametre (her satır için tek parametre)
 interaction.externreconnect.progress.0_title = Harici-Tekrar Bağlan
 interaction.externreconnect.progress.1_retries = Harici-Tekrar Bağlan #
 interaction.externreconnect.progress.2_oldIP = Harici-Tekrar Bağlan Eski IP:
 interaction.externreconnect.progress.3_ipcheck = Harici-Tekrar Bağlan Yeni IP: %s / %s
-interaction.externreconnect.retries = Mak.deneme sayısı [-1 = Sınırsız]
+interaction.externreconnect.retries = Mak. deneme sayısı (-1=Limitsiz)
 interaction.externreconnect.toString = Harici Tekrar Bağlantı uygulaması çalıştır
-interaction.externreconnect.waitForIp = IP Zamanlayıcı [san]
-interaction.externreconnect.waitForTermination = cmd sonlandırma süresi [san]
-interaction.externreconnect.waitTimeToFirstIPCheck = İlk IP kontrolü için bekleme süresi [san]
+interaction.externreconnect.waitForIp = IP Zamanlayıcı (san)
+interaction.externreconnect.waitForTermination = cmd sonlandırma süresi (san)
+interaction.externreconnect.waitTimeToFirstIPCheck = İlk IP kontrolü bekleme süresi (san)
 interaction.jdchat.deslanguage = buna:
 interaction.jdchat.native = buna:
 interaction.jdexit.name = jD çıkış
@@ -694,7 +694,7 @@ interaction.simpleExecute.executein = Burda çalıştır (klasör)
 interaction.simpleExecute.extended = Gelişmiş ayarlar
 interaction.simpleExecute.helpLink = http://jdownloader.org/page.php?id=119
 interaction.simpleExecute.name = Program/Script yürüt
-interaction.simpleExecute.parameter = Parametre (her parametre için tek satır)
+interaction.simpleExecute.parameter = Parametre (her satır için tek parametre)
 interaction.simpleExecute.test = şimdi çalıştır
 interaction.simpleExecute.useexecutein = Kullanıcı-tanımlasın 'burda çalıştır'
 interaction.simpleExecute.waitForTermination = Komut sonlandırma için bekle
@@ -1083,7 +1083,7 @@ plugins.premium.premiumbutton = Premium Hesap Al
 plugins.SerienJunkies.CatDialog.action = Eylem seçin:
 plugins.SerienJunkies.CatDialog.title = SerienJunkies ::CAT::
 plugins.trayicon.popup.bottom.simDls = Maksimum İndirme Sayısı
-plugins.trayicon.popup.bottom.speed = Hız Sınırı
+plugins.trayicon.popup.bottom.speed = Hız Limiti
 plugins.trayicon.popup.menu.add = İndirme Linki Ekle
 plugins.trayicon.popup.menu.config = Yapılandırma
 plugins.trayicon.popup.menu.exit = Çıkış
@@ -1190,7 +1190,7 @@ plugins.hoster.fastload.bypassapi = API Atlatma
 plugins.optional.folderwatch.menu.check = Konrol et
 plugins.optional.folderwatch.menu.reset = Sıfırla
 plugins.optional.folderwatch.menu.startstop = Başlat/Durdur
-plugins.optional.jdunrar.filefilter.extractto = Bu dizine çıkart
+plugins.optional.jdunrar.filefilter.extractto = Dizin
 plugins.optional.jdunrar.linkmenu.container = JDUnrar
 plugins.optional.jdunrar.linkmenu.openextract2 = Dizin aç (%s)
 plugins.optional.jdunrar.linkmenu.setextract = Buraya çıkart...
@@ -1198,4 +1198,4 @@ plugins.optional.remotecontrol.help = /help for Developer Information.
 plugins.optional.remotecontrol.startedonport = Bu Port'da başladı
 plugins.optional.remotecontrol.stopped = Durduruldu.
 plugins.optional.remotecontrol.toggle = Başlat/Durdur
-gui.config.download.simultan_downloads_per_host = Barındırıcı başına aynı anda Maksimum indirme sayısı [0=Sınırsız]
+gui.config.download.simultan_downloads_per_host = Barındırıcı başına aynı anda Mak.İndirme sayısı [0=Limitsiz]
