--- a/trunk/ressourcen/jd/languages/Italiano.lng
+++ b/trunk/ressourcen/jd/languages/Italiano.lng
@@ -870,7 +870,7 @@ plugins.optional.langfileeditor.keychart.missing = Mancante
 plugins.optional.langfileeditor.keychart.old = Probabilmente obsoleto
 plugins.optional.langfileeditor.languagefile = File lingua:
 plugins.optional.langfileeditor.languagefilevalue = Valore file lingua
-plugins.optional.langfileeditor.name = Editor lingua JD
+plugins.optional.langfileeditor.name = Editor lingua
 plugins.optional.langfileeditor.new = Nuovo
 plugins.optional.langfileeditor.patternentry = <Maschera verifica inserita>
 plugins.optional.langfileeditor.pickmissingcolor = Seleziona colore per elementi mancanti
