--- a/trunk/ressourcen/jd/languages/Nederlands.lng
+++ b/trunk/ressourcen/jd/languages/Nederlands.lng
@@ -1,10 +1,10 @@
 ﻿$translater$ = GiaSoft
 $version$ = $Revision$
 ﻿action.passwordlist.name = Paswoord lijst bewerken
-﻿﻿addons.jdgrowlnotification.menu.enable = Meldingen Activeren
+﻿﻿addons.jdgrowlnotification.menu = Growl Meldingen
 addons.jdlowspeed.statusmessage.disabled = Lage Snelheid detectie uitschakelen
 ﻿addons.jdlowspeed.statusmessage.enabled = Lage Snelheiddetectie ingeschakeld
-addons.jdshutdown.menu = Systeem na het Downloaden Afsluiten
+addons.jdshutdown.menu = Na het Downloaden Afsluiten
 addons.jdshutdown.menu.disable = Na Download Systeem Afsluiten Deactiveren
 addons.jdshutdown.menu.enable = Na Download Systeem Afsluiten Activeren
 addons.jdshutdown.statusmessage.disabled = JDownloader zal het Systeem na het Downloaden NIET afsluiten.
@@ -1527,7 +1527,7 @@ plugins.optional.langfileeditor.keys = Sleutels
 plugins.optional.langfileeditor.languagefile = Taalbestand:
 plugins.optional.langfileeditor.languagefileinfo = <Informatie Taalbestand>
 plugins.optional.langfileeditor.languagefilevalue = Taalbestand waarde
-plugins.optional.langfileeditor.name = JDLangFileEditor
+plugins.optional.langfileeditor.name = Language File Editor
 plugins.optional.langfileeditor.new = Nieuw
 plugins.optional.langfileeditor.ok = OK
 plugins.optional.langfileeditor.patternentry = <Ingave komt overeen met patroon>
