--- a/trunk/ressourcen/jd/languages/arabic.lng
+++ b/trunk/ressourcen/jd/languages/arabic.lng
@@ -1,6 +1,6 @@
 $translater$ = Eng_A_Moktar@yahoo.com
 $version$ = $Revision: 3635 $
-addons.jdgrowlnotification.menu.enable = الرسائل المفعلة
+addons.jdgrowlnotification.menu = الرسائل المفعلة
 addons.jdlowspeed.statusmessage.disabled = تعطيل مستكشف السرعات البطيئة
 addons.jdlowspeed.statusmessage.enabled = تفعيل مستكشف السرعات البطيئة
 addons.jdshutdown.menu = إغلاق الجهاز بعد إكتمال التحميلات
@@ -921,7 +921,7 @@ plugins.optional.langfileeditor.keychart.old = قديم
 plugins.optional.langfileeditor.keys = مفاتيح
 plugins.optional.langfileeditor.languagefile = ملف اللغة : 
 plugins.optional.langfileeditor.languagefilevalue = قيمة ملف اللغة
-plugins.optional.langfileeditor.name = JD محرر ملفات اللغة
+plugins.optional.langfileeditor.name = محرر ملفات اللغة
 plugins.optional.langfileeditor.new = جديد
 plugins.optional.langfileeditor.patternentry = <Entry matches Pattern>
 plugins.optional.langfileeditor.pickmissingcolor = إختار لون للعناصر الناقصة
