--- a/trunk/ressourcen/jd/languages/Magyar.lng
+++ b/trunk/ressourcen/jd/languages/Magyar.lng
@@ -1113,7 +1113,7 @@ train.chooser.title = jDownloader :: Mindent edz.
 train.method = Válasz Képkód módszert
 wrapper.webupdate.updatefile = Plugin frissítés %s
 ﻿$translater$ = JD-Csapat.
-﻿$version$ = $Forrás: 3813 $
+﻿$version$ = $Revision$
 ﻿addons.jdgrowlnotification.menu.enable = Üzenet engedése
 ﻿addons.jdlowspeed.statusmessage.disabled = Lassú sebesség észlelésekor tiltás
 ﻿addons.jdlowspeed.statusmessage.enabled = Lassú sebesség észlelésekor engedélyezés
