--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -2,10 +2,10 @@
 $translater$ = djuzi
 $version$ = $Revision$
 action.passwordlist.name = Lista haseł
-addons.jdgrowlnotification.menu = Growl Powiadomienia
-addons.jdlowspeed.statusmessage.disabled = Deaktywuj wykrywanie powolnych transferów
-addons.jdlowspeed.statusmessage.enabled = Aktywuj wykrywanie powolnych transferów
-addons.jdshutdown.menu = Zamykanie po ukończonym pobieraniu
+addons.jdgrowlnotification.menu = Powiadomienia
+addons.jdlowspeed.statusmessage.disabled = Wykrywanie powolnych transferów
+addons.jdlowspeed.statusmessage.enabled = Wykrywanie powolnych transferów
+addons.jdshutdown.menu = Zamykanie systemu po ukończonym pobieraniu
 addons.jdshutdown.menu.disable = Deaktywuj zamykanie systemu
 addons.jdshutdown.menu.enable = Aktywuj zamykanie systemu
 addons.jdshutdown.run = Zamknij system teraz
@@ -25,12 +25,13 @@ addons.schedule.menu.redo = Resetuj co [godzin]
 addons.schedule.menu.remain = Pozostało:
 addons.schedule.menu.remove = Usuń
 addons.schedule.menu.running = Zatrzymane!
-addons.schedule.menu.settings = Ustawienia
+addons.schedule.menu.settings = Ustawienia harmonogramu
 addons.schedule.menu.start = Rozpocznij
 addons.schedule.menu.start_stop = Rozpocznij/Zatrzymaj pobieranie
 addons.schedule.menu.stop = Zatrzymaj
 addons.schedule.menu.time = Wybierz czas: 
 addons.schedule.name = Harmonogram
+addons.schedule.menu.schedule = Harmonogram
 captcha.ces.banned = Zostałeś zbanowany. Zarejestruj się jeszcze raz.
 captcha.ces.infostring = C.E.S
 captcha.ces.message.body = <link href=\"http://jdownloader.org/jdccs.css\" rel=\"stylesheet\" type=\"text/css\" /><div><p>%s uwaga o %s<hr>%s</p></div>
@@ -1305,6 +1306,7 @@ plugins.errors.error = Błąd:
 plugins.errors.pluginerror = Błąd wtyczki. Powiadom Wsparcie Techniczne.
 plugins.errors.uploadedto.premiumtrafficreached = Osiągnięto limit ruchu
 plugins.errors.wrongpassword = Błędne hasło
+plugins.host.dosyakaydet.breakcaptcha = Oczekiwanie na odczyt kodu Captcha
 plugins.host.enterlinkpassword = Wprowadź hasło linku
 plugins.host.fastload.browsererror = Nie udało się otworzyć linku w przeglądarce
 plugins.host.fastload.errors = Uruchamianie przeglądarki jest nieprawidłowo skonfigurowane
@@ -1454,11 +1456,11 @@ plugins.optional.httpliveheaderscripter.gui.menu.help.wiki = Jak to zrobić
 plugins.optional.httpliveheaderscripter.gui.openfile = Otwórz
 plugins.optional.httpliveheaderscripter.gui.save.manufactur = Producent (np. Siemens)
 plugins.optional.httpliveheaderscripter.gui.save.model = Model? (np. Gigaset 555 (fw 3.01.05)
-plugins.optional.httpliveheaderscripter.gui.title = Kreator skryptów HTTP Live Header
+plugins.optional.httpliveheaderscripter.gui.title = Edytor skryptów HTTP Live Header
 plugins.optional.httpliveheaderscripter.gui.validate.error = Skrypt niepoprawny.
 plugins.optional.httpliveheaderscripter.gui.validate.ok = Skrypt poprawny.
 plugins.optional.httpliveheaderscripter.gui.wikilink = http://wiki.jdownloader.org/index.php?title=HTTPLiveHeader_reconnect_Script_erstellen
-plugins.optional.httpliveheaderscripter.name = HTTPLiveHeaderScripter
+plugins.optional.httpliveheaderscripter.name = Edytor skryptów HTTP Live Header
 plugins.optional.infofilewriter.content = Zawartość:
 plugins.optional.infofilewriter.filename = Nazwa pliku:
 plugins.optional.infofilewriter.name = Zapis pliku Info
@@ -1468,7 +1470,7 @@ plugins.optional.jdchat.doautotranslateself = Tłumacz wszystko co piszę
 plugins.optional.jdchat.enternick = Wybierz pseudonim dla siebie
 plugins.optional.jdchat.gui.title = Czat JD
 plugins.optional.jdchat.locale = ustawienia języka
-plugins.optional.jdchat.menu.windowstatus = Okno czatu
+plugins.optional.jdchat.menu.windowstatus = Uruchom Czat JD
 plugins.optional.jdchat.name = Czat JD
 plugins.optional.jdchat.performonstart = Wykonaj polecenie po nawiązaniu połączenia
 plugins.optional.jdchat.user = Pseudonim
@@ -1616,7 +1618,7 @@ plugins.optional.remotecontrol.name = Zdalna kontrola
 plugins.optional.remotecontrol.port = Port:
 plugins.optional.remotecontrol.startedonport = uruchomiona na porcie
 plugins.optional.remotecontrol.stopped = wyłączona.
-plugins.optional.remotecontrol.toggle = Włącz/Wyłącz RemoteControl
+plugins.optional.remotecontrol.toggle = Włącz/Wyłącz Zdalną kontrolę
 plugins.optional.streamsharingtool.action.end = Zamknij
 plugins.optional.streamsharingtool.action.save.dlc.finished = Kontener StreamingShare gotowy do użycia
 plugins.optional.streamsharingtool.action.start = Start
